# listening

./: .env  .gitignore  Cargo.toml  package-lock.json  package.json  tailwind.config.js  tauri.conf.json
.github/workflows/: main.yml
base64_to_wav/: Cargo.toml
base64_to_wav/src/: main.rs
crates/base64_to_wav/: Cargo.toml
crates/base64_to_wav/src/: main.rs
crates/db/: Cargo.toml
db/src/: lib.rs
model/: Cargo.toml
model/src/: db.rs  lib.rs  resource.rs  view.rs
resource/: data-clean.sql  init.sql
src/: main.rs
src-web/: examine_template.html  index.html  review_template.html  word_info_template.html
src-web/script/: examine.js  home.js  init_const.js  log.js  review.js  tab.js
src-web/scripts-ts/: word_info.ts
src/command/: error.rs  mod.rs  view.rs
src/data/: common.rs  db.rs  hierarchy.rs  mod.rs
src/util/: mod.rs
