[package]
name = "model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.64"}
serde = {version ="1.0.144", features = ["derive", "rc"] }
serde_json = "1.0.85"
log = "0.4.17"
tokio = {version ="1.21.0", features = ["macros", "rt-multi-thread", "fs"] }
infer = "0.15.0"
[dev-dependencies]


